Fix preview size for some backends

Some backends don't return data until everything is scanned.

BUG: 312514